--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
+    <h1>NBA LEAGUE</h1>
+  </body>
+</html>
 
 
-<h1>NBA LEAGUE</h1>
+
 
