--- a/views/players/new.ejs
+++ b/views/players/new.ejs
@@ -9,13 +9,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/teams/new">Players</a></li>
+            <li><a href="/players">Players</a></li>
             <li><a href="/teams">Teams</a></li>
         </ul>
     </nav>
 
     <h2>Enter a comment for Player</h2>
-<form action="/teams/new" method="POST">
+<form action="/players" method="POST">
   <label>Player Name:
     <input type="text" name="playerName">
   </label><br>
