--- a/views/players/show.ejs
+++ b/views/players/show.ejs
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/teams/new">Players</a></li>
+            <li><a href="/players">Players</a></li>
             <li><a href="/teams">Teams</a></li>
         </ul>
     </nav>
