--- a/views/players/new.ejs
+++ b/views/players/new.ejs
@@ -14,7 +14,7 @@
         </ul>
     </nav>
 
-    <h2>Enter a comment for Player</h2>
+    <h2>Enter a Player</h2>
 <form action="/players" method="POST">
   <label>Player Name:
     <input type="text" name="playerName">
@@ -31,9 +31,8 @@
   <label>comment:
     <input type="text" name="comment">
   </label><br>
-  <input type="submit" value="Add Player comment">
+  <input type="submit" value="Add Player">
 </form>
-
 
 
 <%- include('../partials/footer') %>
