--- a/views/players/update.ejs
+++ b/views/players/update.ejs
@@ -15,7 +15,7 @@
     </nav>
 
 
-    <h2>update new player</h2>
+    <h2>Update Player Info</h2>
 
     <form action="/players/<%= player._id %>" method="POST">
       </label><br>
